src/main/java/com/example/timelist/error/GroupStudentDuplicateException.java
package com.example.timelist.error;

public class GroupStudentDuplicateException extends RuntimeException{
}
